Did week2 logical equivalence portion of assignment

--- a/A2-LogEqNormForm.ipynb
+++ b/A2-LogEqNormForm.ipynb
@@ -17,29 +17,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sympy import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Tautologies\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Contradictions"
+    "from sympy import *\n",
+    "from sympy.logic.boolalg import truth_table\n",
+    "\n",
+    "# helper function for printing a truth table, given a sympy expression and the relevant propositions\n",
+    "def print_truth_table(expression, props):\n",
+    "    table = truth_table(expression, props)\n",
+    "    for prop in props:\n",
+    "        print(prop, end='\\t')\n",
+    "    print(expression)\n",
+    "    for values, result in table:\n",
+    "        for value in values:\n",
+    "            print(f\"{'F' if value == 0 else 'T'}\", end ='\\t')\n",
+    "        print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p\tp | ~p\n",
+      "F\tTrue\n",
+      "T\tTrue\n",
+      "\n",
+      "p\t~(p & ~p)\n",
+      "F\tTrue\n",
+      "T\tTrue\n",
+      "\n",
+      "p\tq\tp | (~p & (q | ~q))\n",
+      "F\tF\tTrue\n",
+      "F\tT\tTrue\n",
+      "T\tF\tTrue\n",
+      "T\tT\tTrue\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Tautologies\n",
+    "props = p, q = symbols('p, q')\n",
+    "taut1 = p | ~p\n",
+    "taut2 = ~(p & ~p)\n",
+    "taut3 = p | (~p & (q | ~q))\n",
+    "print_truth_table(taut1, [p])\n",
+    "print()\n",
+    "print_truth_table(taut2, [p])\n",
+    "print()\n",
+    "print_truth_table(taut3, props)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p\tp & ~p\n",
+      "F\tFalse\n",
+      "T\tFalse\n",
+      "\n",
+      "p\t~(p | ~p)\n",
+      "F\tFalse\n",
+      "T\tFalse\n",
+      "\n",
+      "p\tq\tp & (~p | (q & ~q))\n",
+      "F\tF\tFalse\n",
+      "F\tT\tFalse\n",
+      "T\tF\tFalse\n",
+      "T\tT\tFalse\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Contradictions\n",
+    "props = p, q = symbols('p, q')\n",
+    "cont1 = p & ~p\n",
+    "cont2 = ~(p | ~p)\n",
+    "cont3 = p & (~p | (q & ~q))\n",
+    "print_truth_table(cont1, [p])\n",
+    "print()\n",
+    "print_truth_table(cont2, [p])\n",
+    "print()\n",
+    "print_truth_table(cont3, props)"
    ]
   },
   {
@@ -63,20 +133,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function that will test for logical equivalence\n",
     "from sympy.logic.boolalg import simplify_logic\n",
     "\n",
+    "\n",
     "def test_logical_equivalence(expression1, expression2):\n",
-    "    # write code to test for logical equivalence here"
+    "    # write code to test for logical equivalence here\n",
+    "    return simplify_logic(expression1).equals(simplify_logic(expression2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\neg a \\wedge \\neg b$"
+      ],
+      "text/plain": [
+       "~a & ~b"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "simplify_logic(expr1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -119,46 +214,66 @@
     "\n",
     "# Example 1: Idempotent Laws\n",
     "###### define expr1 and expr2 here\n",
+    "expr1 = a & a\n",
+    "expr2 = a\n",
     "print(\"Example 1 - Idempotent Laws:\")\n",
     "print(test_logical_equivalence(expr1, expr2))\n",
     "\n",
     "# Example 2: Double Negation Law\n",
     "###### define expr1 and expr2 here\n",
+    "expr1 = a\n",
+    "expr2 = ~~a\n",
     "print(\"\\nExample 2 - Double Negation Law:\")\n",
     "print(test_logical_equivalence(expr1, expr2))\n",
     "\n",
     "# Example 3: Negation Laws\n",
     "###### define expr1 and expr2 here\n",
+    "expr1 = a | ~a\n",
+    "expr2 = true\n",
     "print(\"\\nExample 3 - Negation Laws:\")\n",
     "print(test_logical_equivalence(expr1, expr2))\n",
     "\n",
     "# Example 4: Commutative Laws\n",
     "###### define expr1 and expr2 here\n",
+    "expr1 = a | b\n",
+    "expr2 = b | a\n",
     "print(\"\\nExample 4 - Commutative Laws:\")\n",
     "print(test_logical_equivalence(expr1, expr2))\n",
     "\n",
     "# Example 5: Associative Laws\n",
     "###### define expr1 and expr2 here\n",
+    "expr1 = ( a | b ) | c\n",
+    "expr2 = a | ( b | c )\n",
     "print(\"\\nExample 5 - Associative Laws:\")\n",
     "print(test_logical_equivalence(expr1, expr2))\n",
     "\n",
     "# Example 6: Distributive Laws\n",
     "###### define expr1 and expr2 here\n",
+    "expr1 = a | ( b & c )\n",
+    "expr2 = ( a | b ) & ( a | c )\n",
     "print(\"\\nExample 6 - Distributive Laws:\")\n",
     "print(test_logical_equivalence(expr1, expr2))\n",
     "\n",
     "# Example 7: Absorption Laws\n",
     "###### define expr1 and expr2 here\n",
+    "expr1 = a | ( a & b )\n",
+    "expr2 = a\n",
     "print(\"\\nExample 7 - Absorption Laws:\")\n",
     "print(test_logical_equivalence(expr1, expr2))\n",
     "\n",
     "# Example 8: Conditional Disjunction Equivalence\n",
     "###### define expr1 and expr2 here\n",
+    "expr1 = a >> b\n",
+    "expr2 = ~a | b\n",
     "print(\"\\nExample 8 - Conditional Disjunction Equivalence:\")\n",
     "print(test_logical_equivalence(expr1, expr2))\n",
     "\n",
     "# Example 9: De Morgan's Laws\n",
     "###### define expr1 and expr2 here\n",
+    "expr1 = ~( a | b )\n",
+    "expr2 = ~a & ~b\n",
+    "expr3 = ~( a & b )\n",
+    "expr4 = ~a | ~b\n",
     "print(\"\\nExample 9 - De Morgan's Laws:\")\n",
     "print(\"Law 1: \" + str(test_logical_equivalence(expr1, expr2)))\n",
     "print(\"Law 2: \" + str(test_logical_equivalence(expr3, expr4)))\n"
@@ -320,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.7"
   },
   "orig_nbformat": 4
  },
