first pass on minterm, maxterms

--- a/A2-LogEqNormForm.ipynb
+++ b/A2-LogEqNormForm.ipynb
@@ -294,52 +294,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1', '0', '0']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 0 = F, 1 = T\n",
+    "# 0 0 0\n",
+    "# 0 0 1\n",
+    "# 0 1 0\n",
+    "# 0 1 1\n",
+    "# 1 0 0\n",
+    "# these are just binary numerals!\n",
+    "#\n",
+    "# 1 - > 000\n",
+    "# 3 - > 010\n",
+    "bin(4) # '0b100\n",
+    "bin(4)[2:] # '100'\n",
+    "[char for char in bin(4)[2:]] # ['1','0','0']\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(p̄ + q̄ + r̄ + s̄)(p̄ + q̄ + r̄ + s)(p̄ + q̄ + r + s̄)(p̄ + q̄ + r + s)(p̄ + q + r + s̄)(p̄ + q + r + s)(p + q̄ + r̄ + s̄)(p + q̄ + r̄ + s)(p + q̄ + r + s̄)(p + q̄ + r + s)(p + q + r + s̄)(p + q + r + s)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sympy\n",
+    "def terms_to_binary(minterm_line_list, num_variables):\n",
+    "    binterms=[]\n",
+    "    for line_number in minterm_line_list:\n",
+    "        terms = [int(char) for char in bin(int(line_number))[2:]]\n",
+    "        while len(terms) < num_variables:\n",
+    "            terms.insert(0,0)\n",
+    "        binterms.append(terms)\n",
+    "    return binterms\n",
+    "\n",
+    "def print_SOP(minterm_line_list, variables):\n",
+    "    binterms = minterms_to_binary(minterm_line_list, len(variables))\n",
+    "    variables = list(variables)\n",
+    "    sop_string = \"\"\n",
+    "    for row in binterms:\n",
+    "        for i, value in enumerate(row):\n",
+    "            sop_string += str(variables[i])\n",
+    "            if value == 0:\n",
+    "                sop_string += \"\\u0304\"\n",
+    "        sop_string += (' + ')\n",
+    "    print(sop_string[:-3])\n",
+    "\n",
+    "def print_POS(maxterm_line_list, variables):\n",
+    "    binterms = terms_to_binary(maxterm_line_list,len(variables))\n",
+    "    variables = list(variables)\n",
+    "    pos_string = \"(\"\n",
+    "    for row in binterms:\n",
+    "        for i, value in enumerate(row):\n",
+    "            pos_string += str(variables[i])\n",
+    "            if value == 0:\n",
+    "                pos_string += \"\\u0304\"\n",
+    "            pos_string += \" + \"\n",
+    "        pos_string = pos_string[:-3] + \")(\"\n",
+    "    print(pos_string[:-1])\n",
+    "\n",
+    "def A2_3_minterm_solver(minterm_string):\n",
+    "    minterm_line_list = minterm_string.split(', ')\n",
+    "    variables = p,q,r,s = sympy.symbols('p,q,r,s')\n",
+    "    print_SOP(minterm_line_list, variables)\n",
+    "\n",
+    "def A2_3_maxterm_solver(maxterm_string):\n",
+    "    maxterm_line_list = maxterm_string.split(', ')\n",
+    "    variables = p,q,r,s = sympy.symbols('p,q,r,s')\n",
+    "    print_POS(maxterm_line_list, variables)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p̄q̄r̄s̄ + p̄q̄r̄s + p̄q̄rs̄ + p̄q̄rs + p̄qrs̄ + p̄qrs + pq̄r̄s̄ + pq̄r̄s + pq̄rs̄ + pq̄rs + pqrs̄ + pqrs\n"
+     ]
+    }
+   ],
    "source": [
     "# 1: Minterms: 0, 1, 2, 3, 6, 7, 8, 9, 10, 11, 14, 15\n",
-    "\n"
+    "A2_3_minterm_solver('0, 1, 2, 3, 6, 7, 8, 9, 10, 11, 14, 15')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p̄q̄r̄s̄ + p̄q̄r̄s + p̄q̄rs̄ + p̄q̄rs + p̄qr̄s + p̄qrs̄ + p̄qrs + pq̄r̄s̄ + pq̄r̄s + pq̄rs̄ + pq̄rs + pqr̄s̄ + pqr̄s + pqrs̄ + pqrs\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. Minterms: 0, 1, 2, 3, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15\n",
-    "\n"
+    "A2_3_minterm_solver('0, 1, 2, 3, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p̄q̄r̄s̄ + p̄q̄r̄s + p̄q̄rs̄ + p̄q̄rs + pq̄r̄s̄ + pq̄r̄s + pq̄rs̄ + pq̄rs\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. Minterms: 0, 1, 2, 3, 8, 9, 10, 11\n",
-    "\n"
+    "A2_3_minterm_solver('0, 1, 2, 3, 8, 9, 10, 11')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(p̄ + q̄ + r̄ + s̄)(p̄ + q̄ + r̄ + s)(p̄ + q̄ + r + s̄)(p̄ + q + r̄ + s)(p̄ + q + r + s)(p + q̄ + r + s̄)(p + q + r̄ + s)(p + q + r + s)\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. Maxterms: 0, 1, 2, 5, 7, 10, 13, 15\n",
-    "\n"
+    "\n",
+    "A2_3_maxterm_solver('0, 1, 2, 5, 7, 10, 13, 15')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(p̄ + q̄ + r̄ + s̄)(p̄ + q̄ + r + s̄)(p̄ + q̄ + r + s)(p̄ + q + r + s̄)(p + q̄ + r̄ + s̄)(p + q̄ + r̄ + s)(p + q + r̄ + s̄)(p + q + r + s)\n"
+     ]
+    }
+   ],
    "source": [
     "# 5. Maxterms: 0, 2, 3, 6, 8, 9, 12, 15\n",
-    "\n"
+    "\n",
+    "A2_3_maxterm_solver('0, 2, 3, 6, 8, 9, 12, 15')"
    ]
   },
   {
@@ -352,6 +487,13 @@
     "2. (p or q) and (not p or q or r)\n",
     "3. (x and y) or (not y and z)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -421,7 +563,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
