Added cnf, dnf, satisfiability

--- a/A2-LogEqNormForm.ipynb
+++ b/A2-LogEqNormForm.ipynb
@@ -327,17 +327,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(p̄ + q̄ + r̄ + s̄)(p̄ + q̄ + r̄ + s)(p̄ + q̄ + r + s̄)(p̄ + q̄ + r + s)(p̄ + q + r + s̄)(p̄ + q + r + s)(p + q̄ + r̄ + s̄)(p + q̄ + r̄ + s)(p + q̄ + r + s̄)(p + q̄ + r + s)(p + q + r + s̄)(p + q + r + s)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sympy\n",
     "def terms_to_binary(minterm_line_list, num_variables):\n",
@@ -490,36 +482,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1: (a and b) or (b and c)"
+    "import sympy\n",
+    "from sympy import symbols, to_cnf, to_dnf\n",
+    "from sympy.logic.boolalg import is_cnf, is_dnf\n",
+    "\n",
+    "def cnf_dnf_tester(expression):\n",
+    "    print(expression)\n",
+    "    if is_cnf(expression):\n",
+    "        print(\"Expression in CNF\")\n",
+    "    else:\n",
+    "        print(f\"Expression not in CNF. CNF form is: {to_cnf(expression, simplify=True)}\")\n",
+    "    if is_dnf(expression):\n",
+    "        print(\"Expression in DNF\")\n",
+    "    else:\n",
+    "        print(f\"Expression not in DNF. DNF form is: {to_dnf(expression, simplify=True)}\")\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(a & b) | (b & c)\n",
+      "Expression not in CNF. CNF form is: b & (a | c)\n",
+      "Expression in DNF\n"
+     ]
+    }
+   ],
    "source": [
-    "# 2: (p or q) and (not p or q or r)\n"
+    "# 1: (a and b) or (b and c)\n",
+    "exp = (a&b)|(b&c)\n",
+    "cnf_dnf_tester(exp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(p | q) & (q | r | ~p)\n",
+      "Expression in CNF\n",
+      "Expression not in DNF. DNF form is: q | (p & r)\n"
+     ]
+    }
+   ],
    "source": [
-    "# 3: (x and y) or (not y and z)"
+    "# 2: (p or q) and (not p or q or r)\n",
+    "p,q,r,s = sympy.symbols('p,q,r,s')\n",
+    "exp = (p|q)&(~p|q|r)\n",
+    "cnf_dnf_tester(exp)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(x & y) | (z & ~y)\n",
+      "Expression not in CNF. CNF form is: (y | z) & (x | ~y)\n",
+      "Expression in DNF\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3: (x and y) or (not y and z)\n",
+    "x,y,z = sympy.symbols('x,y,z')\n",
+    "exp = (x & y) | (z & ~y)\n",
+    "cnf_dnf_tester(exp)"
    ]
   },
   {
@@ -535,29 +582,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1 (a and b) or (not a and b) or (c and not b)\n"
+    "from sympy import satisfiable\n",
+    "\n",
+    "def print_satisfiability(expression):\n",
+    "    results = list(satisfiable(expression, all_models=True))\n",
+    "    if results[0] == False:\n",
+    "        print(f\"Expression {expression} is not satisfiable with any combination of values!\")\n",
+    "    else:\n",
+    "        print(f\"Expression {expression} is satisfiable with the following combinations of values:\")\n",
+    "        for result in results:\n",
+    "            print(str(result)[1:-1])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Expression (a & b) | (b & ~a) | (c & ~b) is satisfiable with the following combinations of values:\n",
+      "b: True, c: True, a: False\n",
+      "b: True, a: False, c: False\n",
+      "b: True, c: True, a: True\n",
+      "b: True, a: True, c: False\n",
+      "c: True, a: False, b: False\n",
+      "c: True, a: True, b: False\n"
+     ]
+    }
+   ],
    "source": [
-    "# 2: (p or q) and (not p or q or r)\n"
+    "# 1 (a and b) or (not a and b) or (c and not b)\n",
+    "exp = (a&b)|(~a&b)|(c&~b)\n",
+    "print_satisfiability(exp)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 110,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Expression (p | q) & (q | r | ~p) is satisfiable with the following combinations of values:\n",
+      "q: True, r: True, p: False\n",
+      "q: True, r: False, p: False\n",
+      "q: True, p: True, r: True\n",
+      "q: True, p: True, r: False\n",
+      "p: True, r: True, q: False\n"
+     ]
+    }
+   ],
    "source": [
-    "# 3: (x and y) or (not y and z)\n"
+    "# 2: (p or q) and (not p or q or r)\n",
+    "exp = (p|q)&(~p|q|r)\n",
+    "print_satisfiability(exp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Expression (x & y) | (z & ~y) is satisfiable with the following combinations of values:\n",
+      "x: True, z: True, y: False\n",
+      "z: True, y: False, x: False\n",
+      "y: True, x: True, z: True\n",
+      "y: True, x: True, z: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3: (x and y) or (not y and z)\n",
+    "exp = (x&y) | (~y & z)\n",
+    "print_satisfiability(exp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Expression a & ~a is not satisfiable with any combination of values!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_satisfiability(a&~a)"
    ]
   }
  ],
