--- a/A1-PropositionalLogic.ipynb
+++ b/A1-PropositionalLogic.ipynb
@@ -241,6 +241,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -256,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +276,7 @@
     "    table = truth_table(expression, props)\n",
     "    for prop in props:\n",
     "        print(prop, end='\\t')\n",
-    "    print(expression)\n",
+    "    pprint()\n",
     "    for values, result in table:\n",
     "        for value in values:\n",
     "            print(f\"{'F' if value == 0 else 'T'}\", end ='\\t')\n",
@@ -276,14 +285,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x\ty\tx & y\n",
+      "x\ty\tx ∧ y\n",
       "F\tF\tFalse\n",
       "F\tT\tFalse\n",
       "T\tF\tFalse\n",
@@ -301,14 +310,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x\ty\tx | y\n",
+      "x\ty\tx ∨ y\n",
       "F\tF\tFalse\n",
       "F\tT\tTrue\n",
       "T\tF\tTrue\n",
@@ -326,14 +335,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x\ty\tImplies(x, y)\n",
+      "x\ty\tx → y\n",
       "F\tF\tTrue\n",
       "F\tT\tTrue\n",
       "T\tF\tFalse\n",
@@ -351,14 +360,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x\ty\tx ^ y\n",
+      "x\ty\tx ⊻ y\n",
       "F\tF\tFalse\n",
       "F\tT\tTrue\n",
       "T\tF\tTrue\n",
@@ -376,14 +385,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "w\tx\ty\tz\t(y & z) | (~w & ~x)\n",
+      "w\tx\ty\tz\t(y ∧ z) ∨ (¬w ∧ ¬x)\n",
       "F\tF\tF\tF\tTrue\n",
       "F\tF\tF\tT\tTrue\n",
       "F\tF\tT\tF\tTrue\n",
