Tidied up notebook, expanded some comments

--- a/A2-LogEqNormForm.ipynb
+++ b/A2-LogEqNormForm.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,29 +144,6 @@
     "def test_logical_equivalence(expression1, expression2):\n",
     "    # write code to test for logical equivalence here\n",
     "    return simplify_logic(expression1).equals(simplify_logic(expression2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\neg a \\wedge \\neg b$"
-      ],
-      "text/plain": [
-       "~a & ~b"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "simplify_logic(expr1)"
    ]
   },
   {
@@ -294,44 +271,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['1', '0', '0']"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 0 = F, 1 = T\n",
-    "# 0 0 0\n",
-    "# 0 0 1\n",
-    "# 0 1 0\n",
-    "# 0 1 1\n",
-    "# 1 0 0\n",
-    "# these are just binary numerals!\n",
-    "#\n",
-    "# 1 - > 000\n",
-    "# 3 - > 010\n",
-    "bin(4) # '0b100\n",
-    "bin(4)[2:] # '100'\n",
-    "[char for char in bin(4)[2:]] # ['1','0','0']\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sympy\n",
+    "# Uses wizardry to convert a line number into a list of true/false prepositions in constant time\n",
     "def terms_to_binary(minterm_line_list, num_variables):\n",
     "    binterms=[]\n",
     "    for line_number in minterm_line_list:\n",
@@ -341,8 +286,9 @@
     "        binterms.append(terms)\n",
     "    return binterms\n",
     "\n",
+    "# Given a list of integers representing the minterms, prints the Sum of Products form of the expression that satisfies the minterms\n",
     "def print_SOP(minterm_line_list, variables):\n",
-    "    binterms = minterms_to_binary(minterm_line_list, len(variables))\n",
+    "    binterms = terms_to_binary(minterm_line_list, len(variables))\n",
     "    variables = list(variables)\n",
     "    sop_string = \"\"\n",
     "    for row in binterms:\n",
@@ -353,6 +299,7 @@
     "        sop_string += (' + ')\n",
     "    print(sop_string[:-3])\n",
     "\n",
+    "# Given a list of integers representing the MAXterms, prints the PRODUCT OF SUMS form of the expression that satisfies the maxterms\n",
     "def print_POS(maxterm_line_list, variables):\n",
     "    binterms = terms_to_binary(maxterm_line_list,len(variables))\n",
     "    variables = list(variables)\n",
@@ -366,11 +313,12 @@
     "        pos_string = pos_string[:-3] + \")(\"\n",
     "    print(pos_string[:-1])\n",
     "\n",
+    "# Convert a string of numbers into a list of integers and plug it into the SOP function\n",
     "def A2_3_minterm_solver(minterm_string):\n",
     "    minterm_line_list = minterm_string.split(', ')\n",
     "    variables = p,q,r,s = sympy.symbols('p,q,r,s')\n",
     "    print_SOP(minterm_line_list, variables)\n",
-    "\n",
+    "# same, but plugs it into the POS function\n",
     "def A2_3_maxterm_solver(maxterm_string):\n",
     "    maxterm_line_list = maxterm_string.split(', ')\n",
     "    variables = p,q,r,s = sympy.symbols('p,q,r,s')\n",
@@ -668,23 +616,6 @@
     "# 3: (x and y) or (not y and z)\n",
     "exp = (x&y) | (~y & z)\n",
     "print_satisfiability(exp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Expression a & ~a is not satisfiable with any combination of values!\n"
-     ]
-    }
-   ],
-   "source": [
-    "print_satisfiability(a&~a)"
    ]
   }
  ],
