Added 2a back in >.<

--- a/A1-PropositionalLogic.ipynb
+++ b/A1-PropositionalLogic.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
        "y | (y & ~x)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        "y | (y & ~x)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,32 @@
        "Implies(a, b)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2a. a implies b standard\n",
+    "a, b = symbols(\"a, b\")\n",
+    "a >> b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle a \\Rightarrow b$"
+      ],
+      "text/plain": [
+       "Implies(a, b)"
+      ]
+     },
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +139,7 @@
        "(m | ~n) & (r | ~s)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +164,7 @@
        "(m | ~n) & (r | ~s)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +198,7 @@
        "True"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +223,7 @@
        "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +251,7 @@
        "False"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,15 +263,6 @@
     "\n",
     "# Substitute the given values m = True, n = False, a = False, b = True, and c = False into the expression\n",
     "statement.subs({m:True, n:False, a:False, b:True, c:False})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display()"
    ]
   },
   {
@@ -265,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +292,7 @@
     "    table = truth_table(expression, props)\n",
     "    for prop in props:\n",
     "        print(prop, end='\\t')\n",
-    "    pprint()\n",
+    "    pprint(props)\n",
     "    for values, result in table:\n",
     "        for value in values:\n",
     "            print(f\"{'F' if value == 0 else 'T'}\", end ='\\t')\n",
@@ -290,14 +306,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x\ty\tx ∧ y\n",
+      "x\ty\t(x, y)\n",
       "F\tF\tFalse\n",
       "F\tT\tFalse\n",
       "T\tF\tFalse\n",
@@ -315,14 +331,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x\ty\tx ∨ y\n",
+      "x\ty\t(x, y)\n",
       "F\tF\tFalse\n",
       "F\tT\tTrue\n",
       "T\tF\tTrue\n",
@@ -340,14 +356,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x\ty\tx → y\n",
+      "x\ty\t(x, y)\n",
       "F\tF\tTrue\n",
       "F\tT\tTrue\n",
       "T\tF\tFalse\n",
@@ -365,14 +381,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x\ty\tx ⊻ y\n",
+      "x\ty\t(x, y)\n",
       "F\tF\tFalse\n",
       "F\tT\tTrue\n",
       "T\tF\tTrue\n",
@@ -390,14 +406,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "w\tx\ty\tz\t(y ∧ z) ∨ (¬w ∧ ¬x)\n",
+      "w\tx\ty\tz\t(w, x, y, z)\n",
       "F\tF\tF\tF\tTrue\n",
       "F\tF\tF\tT\tTrue\n",
       "F\tF\tT\tF\tTrue\n",
@@ -441,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +469,7 @@
        "~p"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +494,7 @@
        "p > q"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +518,7 @@
        "Implies(~p, ~q)"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +542,7 @@
        "q & ~p"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,4 +576,3 @@
  "nbformat": 4,
  "nbformat_minor": 2
 }
-
